[package]
name = "esp01"
version = "0.1.0"
authors = ["stephanh <stephanh@users.noreply.github.com>"]
readme = "README.md"
edition = "2018"

[dependencies]
embedded-hal = "0.2"
nb = "0.1"
atat = "0.3"
heapless = { version = "0.5.3", features = ["serde"] }
serde_at = { path = "/Users/hoermast/personal/rust/embedded/atat/serde_at" }
serde = {version = "^1", default-features = false,  features = ["derive"] }
serde_repr = "0.1"

[dev-dependencies]
embedded-hal-mock = "0.7"
embedded-hal = "0.2"
serialport = "3.3.0"
void = "1"
env_logger = "0.6"
log = "0.4"
